--- a/ui-countrylist/src/main/res/values/strings.xml
+++ b/ui-countrylist/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="country_removed">%s has been removed from favorites successfully</string>
     <string name="country_add_failed">It was not possible to add %s to favorites</string>
     <string name="country_remove_failed">It was not possible to remove %s from favorites</string>
+    <string name="country_list">List of countries</string>
+    <string name="close">Close</string>
 </resources>
